Fixed bug with brand image wrapping

--- a/journal-index/static/scss/_bars.scss
+++ b/journal-index/static/scss/_bars.scss
@@ -44,17 +44,18 @@ Bars
     .navbar-brand{
         line-height: 54px;
         margin-top: 0px;
-        padding: 0 0 0 0;
     }
 }
 
-.navbar-brand>img {
+.navbar-brand{
+    height: auto;
+    padding: 0 0 0 0;
+}
+
+.navbar-brand>img{
     display: block;
-    height: 110px;
-    margin-top: 2px;
-    margin-bottom: 2px;
-    padding-top: 0px;
-    padding-bottom: 30px;
+    height: 80px;
+    width: auto;
 }
 
 
